# workout_app-

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20251016_0001_create_workout_templates.py  20251017_0002_add_knowledge_and_fts.py
backend/app/: main.py
backend/app/api/routes/: chat.py  feedback.py  workouts.py
backend/app/core/: config.py
backend/app/data/: workouts.json
backend/app/data/knowledge/: jeff_nippard.json
backend/app/db/: models.py  session.py
backend/app/schemas/: chat.py  feedback.py  workout.py
backend/app/services/: chat.py  recommendation.py
docs/: system_design.md
scripts/: ingest_knowledge.py  ingest_links.py  seed_workouts.py
tests/: test_chat.py  test_e2e_chat_retrieval.py  test_feedback.py  test_health_and_ingestion.py  test_recommender.py  test_workouts.py
