[tool.poetry]
name = "workout_app"
version = "0.1.0"
description = "Science-based workout recommendation API inspired by Jeff Nippard principles."
authors = []
packages = [{ include = "backend" }]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = "^2.7.0"
pydantic-settings = "^2.4.0"
python-dotenv = "^1.0.1"
SQLAlchemy = "^2.0.36"
alembic = "^1.13.2"
httpx = "^0.27.0"
trafilatura = "^1.7.0"
youtube-transcript-api = "^0.6.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
anyio = "^4.3.0"
ruff = "^0.5.0"
pytest-cov = "^4.1.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=backend --cov-report=term-missing --cov-fail-under=70"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "B", "I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
